# mcu-dashboard

./: .gitignore  CLAUDE.md  brief.md
.claude/: launch.json
.claude/skills/mcu-extract/: SKILL.md
Texas_Instruments/ControlCard_pinout/: TMDSCNCD2838x_RevB_180cCARD_pinout (2).xlsx
docs/: DATA_SCHEMA.md  IMPLEMENTATION_TRACKER.md
extractor/: pyproject.toml
extractor/src/: cli.py  excel_extractor.py  pdf_extractor.py  schema.py
extractor/tests/: test_excel_extractor.py  test_schema.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: deviceStore.test.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/layout/: Header.tsx  StatusBar.tsx
frontend/src/data/: f28388d-controlcard.json
frontend/src/store/: deviceStore.ts
frontend/src/types/: device.ts
frontend/src/utils/: export.ts
frontend/src/views/: ClockView.tsx  DashboardView.tsx  PeripheralsView.tsx  PinoutView.tsx
