[project]
name = "mcu-extractor"
version = "0.1.0"
description = "Extract MCU pin mapping, clock tree, and peripheral data from manufacturer datasheets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.66.0",
    "docling-core>=2.57.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch",
    "onnxruntime-gpu",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcu-extract = "src.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
